[gd_scene load_steps=37 format=3 uid="uid://bkb1hbs8mvgj2"]

[ext_resource type="Script" uid="uid://2vqfh8nuh3mc" path="res://Scripts/Enemies/ninja.gd" id="1_joiax"]
[ext_resource type="PackedScene" uid="uid://cvgjcwqn6k8eu" path="res://Scenes/UI/Overlay/health.tscn" id="2_hkrva"]
[ext_resource type="Script" uid="uid://dlgatnu5tx5lj" path="res://Scripts/Enemies/health_enemy.gd" id="3_s70sf"]
[ext_resource type="Shader" uid="uid://o6ancnl5jgcr" path="res://Shaders/Blink.gdshader" id="4_bv2jq"]
[ext_resource type="Texture2D" uid="uid://bh7xn1lp16dnx" path="res://Assets/Sprites/ninja.png" id="5_joiax"]
[ext_resource type="FontFile" uid="uid://x2dwsfc3en6q" path="res://Assets/Tutorial Open Assets/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="6_7y3r3"]
[ext_resource type="PackedScene" uid="uid://dm61xmst0522o" path="res://Scenes/Items/magic_bamboo.tscn" id="7_8drt2"]
[ext_resource type="PackedScene" uid="uid://cg5703l8qujlb" path="res://Assets/Particles/BloodParticle.tscn" id="7_hkrva"]
[ext_resource type="Texture2D" uid="uid://dmv57vx1668nw" path="res://Assets/Sprites/Magic Bamboo/+ 15 hp magic bamboo.png" id="9_hkrva"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6hc3a"]
resource_local_to_scene = true
shader = ExtResource("4_bv2jq")
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_intensity = 0.0
shader_parameter/damage_active = false
shader_parameter/damage_time = 0.0
shader_parameter/shake_intensity = 0.0
shader_parameter/distortion = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hkrva"]
atlas = ExtResource("5_joiax")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s70sf"]
atlas = ExtResource("5_joiax")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv2jq"]
atlas = ExtResource("5_joiax")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayfse"]
atlas = ExtResource("5_joiax")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y3r3"]
atlas = ExtResource("5_joiax")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8drt2"]
atlas = ExtResource("5_joiax")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5rad"]
atlas = ExtResource("5_joiax")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtt7l"]
atlas = ExtResource("5_joiax")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdo65"]
atlas = ExtResource("5_joiax")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfc0b"]
atlas = ExtResource("5_joiax")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w3ha"]
atlas = ExtResource("5_joiax")
region = Rect2(80, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt6qm"]
atlas = ExtResource("5_joiax")
region = Rect2(96, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2m21"]
atlas = ExtResource("5_joiax")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_enwhp"]
atlas = ExtResource("5_joiax")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0u2f"]
atlas = ExtResource("5_joiax")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8k8y"]
atlas = ExtResource("5_joiax")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqsgl"]
atlas = ExtResource("5_joiax")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaw7t"]
atlas = ExtResource("5_joiax")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmr4b"]
atlas = ExtResource("5_joiax")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7vcu"]
atlas = ExtResource("5_joiax")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yovtb"]
atlas = ExtResource("5_joiax")
region = Rect2(80, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wpvyt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkrva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s70sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv2jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayfse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y3r3")
}],
"loop": true,
"name": &"Attack_melee",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8drt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5rad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtt7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdo65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfc0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w3ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt6qm")
}],
"loop": false,
"name": &"Attack_shoot",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2m21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enwhp")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0u2f")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8k8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqsgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaw7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmr4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7vcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yovtb")
}],
"loop": true,
"name": &"Walking",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3xw0u"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tq37w"]

[sub_resource type="Theme" id="Theme_tq37w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tq37w"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("shootPoint") groups=["Enemy"]]
collision_layer = 257
collision_mask = 5
script = ExtResource("1_joiax")
shootPoint = NodePath("CollisionShape2D")

[node name="Health" parent="." instance=ExtResource("2_hkrva")]
script = ExtResource("3_s70sf")
hp = 50

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_6hc3a")
sprite_frames = SubResource("SpriteFrames_wpvyt")
animation = &"Attack_shoot"
autoplay = "Idle"

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -26.0
offset_right = 20.0
offset_bottom = -3.0
theme_override_fonts/font = ExtResource("6_7y3r3")
theme_override_font_sizes/font_size = 8
text = "HP: 50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BloodParticle" parent="." instance=ExtResource("7_hkrva")]

[node name="in_range_shoot_timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3xw0u")

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(0, 10)

[node name="TopCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, -12)
collision_mask = 4

[node name="TopCheckCooldown" type="Timer" parent="."]

[node name="RayCast2DRight" type="RayCast2D" parent="."]
target_position = Vector2(68, 0)
collision_mask = 4
collide_with_areas = true

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
target_position = Vector2(-68, 0)
collision_mask = 4

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 129
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_tq37w")

[node name="ItemSpawnPoint" type="Marker2D" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -6.0
offset_top = -16.0
offset_right = 6.0
offset_bottom = -12.0
theme = SubResource("Theme_tq37w")
theme_override_colors/font_color = Color(0, 0.94902, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_tq37w")
show_percentage = false

[node name="Drops" type="Node2D" parent="."]
visible = false
z_index = 5

[node name="MagicBamboo" parent="Drops" instance=ExtResource("7_8drt2")]
texture = ExtResource("9_hkrva")
heal_amount = 10
COLOR = Color(0.2, 0.596078, 0.294118, 1)
drop_chance = 50
is_active = false

[node name="Tollie" type="Node2D" parent="Drops"]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="hp_changed" from="Health" to="." method="_on_health_hp_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="in_range_shoot_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TopCheckCooldown" to="." method="_on_top_check_cooldown_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
